--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "inquirer": "^3.3.0",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "prompt": "^1.0.0"
   }
 }
